testdata/invalid/internal/router/router.go
package router

// VIOLATION: router imports domain sub-package directly
import _ "github.com/kimtaeyun/testproject-dc-invalid/internal/domain/user/core/model"

func Setup() {}
